2003-07-22  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/fssession_clean.sh: session
	cleaner script made to work nicely with AE Cache sessions.

	* SkunkWeb/Services/sessionHandler/AECacheSessionStore.py
	(Store.delete): now delete the session file rather than "expiring"
	it.

	* pylibs/AE/Cache.py: added "writeKeyFile" configuration
	parameter; writing of key files is now optional.  Also, stopped
	the chmod-ing of cache files.

2003-07-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: updated sessionHandler documentation.

	* SkunkWeb/Services/sessionHandler/Session.py (getSessionID): fix
	for session deletion.

2003-07-19  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/manual/instConfig.txt: started to make changes.  Also,
	wrapped lines.

	* configure.in, configure: removed silly --with-skunkweb option so
	we don't need to document it.

	* SkunkWeb/Services/sessionHandler/AECacheSessionStore.py: added
	session store that uses the AE Cache.

2003-07-18  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler: all modules in the package
	overhauled to support scoping.

	* SkunkWeb/Services/requestHandler/requestHandler.py,
	SkunkWeb/Services/web/protocol.py (_processRequest): : commented
	out debug statements in the main loop.

	* pylibs/DT/DTLexer.py (DTToken.__repr__): fix for closed elements.

2003-07-17  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/hooks.py (KeyedHook.oneshot, Hook.oneshot): added
	"oneshot" methods, where a hook function will be executed just
	once and then removed.

	* pylibs/formlib/aecomp.py (ComponentSubmitProcessor): added new
	class that wraps a component call in a function in a trivial way.

2003-07-16  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/SafeSpoolTag.py: modified to use
	DT.DTCompilerUtil.safe_import.

	* pylibs/DT/DTCompilerUtil.py (safe_import): added utility